# utility-belt

./: .gitmodules  AGENTS.md  CNAME  LICENSE  README.md  glide.yaml  index.html  justfile  params.json
deprecated/: justfile
deprecated/python/git-smart-commit/: TODO.md  main.py  pyproject.toml
deprecated/python/git-smart-commit/src/git_smart_commit/: cli.py  config.py  prompt.py
deprecated/python/git-smart-commit/src/git_smart_commit/llm/: llm_cli.py
firefox/video-downloader/: Makefile  README.md  background.js  manifest.json
go/: Makefile  glide.yaml  init.sh
go/basic-auth/: basic-auth.go
go/day-of-year/: main.go
go/github-analytics/: github-analytics.go
go/immich-upload-album/: .env  go.mod  go.sum  main.go
go/prettify-json/: main.go
go/src/github.com/jonfk/utility-belt/: glide.yaml
go/src/github.com/jonfk/utility-belt/day-of-year/: main.go
go/src/github.com/jonfk/utility-belt/pass-gen/: char-type.go
inspection-server/: inspection-server.go
js/video-downloader/: build.js  package-lock.json  package.json  video-downloader.js
js/video-downloader-server/: .dockerignore  AGENTS.md  Dockerfile  PLAN.md  TODO.md  justfile  package-lock.json  package.json  tsconfig.json
js/video-downloader-server/.claude/: settings.local.json
js/video-downloader-server/public/: app.js  index.html  style.css
js/video-downloader-server/src/: config.ts  error-handler.ts  errors.ts  puppeteer.ts  routes.ts  schemas.ts  server.ts  storage.ts
js/video-downloader-server/src/services/: download.ts  name.ts
pass-gen/: pass-gen.go
python/: .gitignore  AGENTS.md  codex-notify.py  daily-journal-paper-importer.py  fix-photos-exif-guess.py  github-analysis.py  init.sh  organize-files-into-dirs-by-date.py  yt-transcript.py
python/git-smart-branch-delete/: README.md  main.py  pyproject.toml
python/git-smart-commit/: TODO.md  plan.md  pyproject.toml
python/git-smart-commit/src/git_smart_commit/: app.py  cli.py  config.py  gitio.py  models.py  prompt.py  render.py
python/git-smart-commit/src/git_smart_commit/llm/: protocol.py
python/git-smart-push/: README.md  main.py  pyproject.toml
python/git-smart-worktree/: README.md  SPEC.md  main.py  pyproject.toml
python/git-smart-worktree/git_smart_worktree/: __init__.py  cli.py  config.py  exceptions.py  fs.py  git.py  interactive.py  models.py  worktrees.py
python/git-smart-worktree/tests/: test_cli_worktree_choices.py
python/git-worktree-utils/: README.md  SPEC.md  TODO.md  main.py  plan.md  pyproject.toml
python/git-worktree-utils/git_smart_worktree/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  git.py  interactive.py  models.py
python/git-worktree-utils/git_worktree_utils/: __init__.py  __main__.py  _version.py  cli.py  exceptions.py  git.py  interactive.py  worktrees.py
python/pi-docker/: README.md  pyproject.toml
python/pi-docker/pi_docker/: Dockerfile  __init__.py  __main__.py  cli.py  docker-entrypoint.sh
python/prune-openapi/: README.md  main.py  pyproject.toml
rust/alert-ready-api/: Cargo.toml
rust/alert-ready-api/src/: main.rs
rust/cmd-queue/: Cargo.toml  Makefile  README.md
rust/cmd-queue/src/: cli_util.rs  client.rs  constants.rs  error.rs  lib.rs  queue.rs  task.rs  workerpool.rs
rust/cmd-queue/src/execution/: mod.rs  scheduler.rs
rust/cmd-queue/src/web/: api.rs  html.rs
rust/cmd-queue/templates/: index.html
rust/cmd-queue2/: Cargo.toml  Makefile
rust/cmd-queue2/src/: error.rs  lib.rs  main.rs  ytdlp.rs
rust/codex-commit/: Cargo.toml
rust/codex-commit/assets/: commit-proposal-prompt.md
rust/codex-commit/src/: assets.rs  assets_tests.rs  cli.rs  cli_tests.rs  codex.rs  error.rs  flow.rs  git.rs  git_tests.rs  main.rs  message.rs  message_tests.rs  prompt.rs  prompt_tests.rs  proposal.rs  proposal_tests.rs  ui.rs  ui_tests.rs
rust/codex-commit/tests/: cli_flow.rs
rust/ghostty-session-manager/: Cargo.toml  design-doc.md  idea.md  implementation-plan.md
rust/ghostty-session-manager/reference/: Ghostty.sdef
rust/ghostty-session-manager/src/: app.rs  application.rs  debug_profile.rs  domain.rs  error.rs  ghostty.rs  main.rs  search.rs  state.rs  tui.rs
rust/ghostty-session-manager/src/cli/: args.rs  json.rs  mod.rs  table.rs
rust/ghostty-session-manager/src/ghostty/: applescript.rs
rust/move-photos-without-duplicates/: Cargo.toml  PLAN.md  TODO.md  build.rs  justfile
rust/move-photos-without-duplicates/src/: cleaner.rs  copier.rs  db.rs  existence_checker.rs  main.rs  progress.rs  scanner.rs  types.rs
rust/raw-pics-delete/: Cargo.toml  Makefile
rust/raw-pics-delete/src/: main.rs
rust/text-crypt/: Cargo.toml  Makefile  test_encrypted.txt  test_unencrypted.txt
rust/text-crypt/src/: cli.rs  crypto.rs  error.rs  lib.rs  main.rs  parse.rs
rust/text-crypt/src/cli/: check.rs  decrypt.rs  encrypt.rs
sh/: create-alternate-codex-personal-app.sh  d2_tala.sh  dir_to_clipboard.sh  fix-personal-github-on-work-laptop.sh  start-ssh-proxy.sh  sync-github-keys.sh  utility-belt.sh  whos-listening-ports.sh  yt-transcript.sh
sh/daily-uptime/: daily-uptime-osx.plist  daily-uptime-osx.sh  headers.csv  install.sh
sh/faster-whisper-cli/: faster-whisper.sh  filter-hallucinations.sh
sh/ffmpeg-reencode-quality/: ffmpeg-reencode-quality.sh
sh/vagrant-box/: Vagrantfile  provision.sh
ts/beautiful-mermaid/: README.md  package.json  tsconfig.json
ts/beautiful-mermaid/src/: cli.ts
(+1 files in other folders)
