[project]
name = "git-smart-commit"
version = "0.1.0"
description = "AI-powered git commit message generator"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "litellm>=1.77.5",
    "rich>=14.1.0",
    "typer>=0.19.2",
]

[project.scripts]
git-smart-commit = "git_smart_commit.cli:app"
