[project]
name = "git-smart-worktree"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.12.3,<0.21",
    "InquirerPy>=0.3.4",
    "rich>=13.7.0",
]

[project.scripts]
git-smart-worktree = "git_smart_worktree.cli:app"
