[project]
name = "git-worktree-utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "inquirerpy>=0.3.4",
    "rich>=14.2.0",
    "typer>=0.20.0",
]

[project.scripts]
git-smart-worktree = "git_smart_worktree.cli:app"
