[package]
name = "cmd-queue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
clap = { version = "3.0.14", features = ["derive"] }
clap_complete = "3.1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
rayon = "1.5.1"
crossbeam = "0.8.1"
dashmap = "5.1.0"
daemonize = "0.4.1"
nix = "0.23.1"
tracing = "0.1"
nanoid = "0.4.0"
url = "2.2.2"
pickledb = "0.4.1"
cli-table = "0.4"
humantime = "2.1.0"
askama = "0.11.1"
