[package]
name = "cmd-queue2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
csv = "1.1"
serde = { version = "1", features = ["derive"] }
thiserror = "1.0.37"
serde_yaml = "0.9.14"
tracing = "0.1"
tracing-subscriber = "0.3"
