[package]
name = "ghostty-session-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
error-stack = "0.7.0"
frizbee = "0.9.0"
jiff = { version = "0.2.23", features = ["serde"] }
ratatui = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["registry"] }
