[package]
name = "move-photos-without-duplicates"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.46.1", features = ["full"] }
camino = "1.1.10"
walkdir = "2.5.0"

# error handling
error-stack = "0.5.0"
thiserror = "2.0.12"
rayon = "1.10.0"
