[package]
name = "text-crypt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chacha20poly1305 = "0.9.0"
clap = "2.34.0"
base64 = "0.13.0"
thiserror = "1.0"
walkdir = "2"
rand = "0.8"
rand_chacha = "0.3.1"
dotenv = "0.15.0"
regex = "1"
lazy_static = "1.4.0"
